the window needs to be *raised*

it is not managed by the window manager (explicitly) so it needs to handle
this itself.

this completes the "fix the situation when new screens appear while locked"
problem

REVIEW:108643
BUG:313835